// Copyright 2023 Intrinsic Innovation LLC

syntax = "proto3";

package intrinsic_proto.assets.v1;

import "intrinsic/assets/proto/asset_type.proto";
import "intrinsic/assets/proto/id.proto";
import "intrinsic/assets/proto/metadata.proto";

// Service to manage the installation of assets.
service InstalledAssets {

  // Lists the currently installed assets.
  rpc ListInstalledAssets(ListInstalledAssetsRequest)
      returns (ListInstalledAssetsResponse) {}

  // Gets a specific installed asset.
  rpc GetInstalledAsset(GetInstalledAssetRequest) returns (InstalledAsset) {}
}

message ListInstalledAssetsRequest {
  message Filter {
    optional AssetType asset_type = 1;
  }

  int64 page_size = 1;
  string page_token = 2;
  optional Filter strict_filter = 3;
}

message InstalledAsset {
  Metadata metadata = 1;
}

message ListInstalledAssetsResponse {
  repeated InstalledAsset installed_assets = 1;

  // Pass this token to the subsequent list request to obtain the next page.
  string next_page_token = 2;
}

message GetInstalledAssetRequest {
  Id id = 1;
}
